# test-agent-dev

.gstack/: browse-audit.jsonl  claude-available.json
ypjh/: .gitignore  IMPROVEMENT.md  PRODUCT.md  README.md  serve-frontend.js
ypjh/.claude/: settings.json
ypjh/backend/: .env.example  main.py  pyproject.toml  wrongbook.db
ypjh/backend/api/v1/: router.py
ypjh/backend/api/v1/endpoints/: auth.py  print.py  questions.py  questions_recognize.py  review.py
ypjh/backend/core/: config.py  database.py  image_utils.py  s3_client.py  security.py  sm2.py
ypjh/backend/models/: __init__.py  question.py  review_log.py  user.py
ypjh/backend/prompts/: recognize_question.txt
ypjh/backend/repositories/: question_repository.py  review_repository.py  user_repository.py
ypjh/backend/schemas/: auth.py  common.py  print_schema.py  question.py  recognition.py  review.py
ypjh/backend/services/: auth_service.py  question_service.py  recognition_service.py  review_service.py
ypjh/backend/skills/: .skills_store_lock.json
ypjh/backend/templates/: print_preview.html
ypjh/backend/tests/: conftest.py  test_analysis_schema.py  test_change_password.py  test_image_utils.py  test_learning_status.py  test_print_schema.py  test_question_repository.py  test_question_schema.py  test_question_service.py  test_recognition_analysis.py  test_recognition_service.py  test_recognition_service_extended.py  test_review_repository.py  test_s3_client.py  test_sm2.py
ypjh/backend/tests/api/: test_auth.py  test_error_format.py  test_print.py  test_questions.py  test_recognize.py  test_review.py
(+130 files in other folders)
